--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
   <title>Krowdspace Internal Interface</title>
-  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" type="text/css" href="css/interface.css" />
   <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
   <body>
     <riot-tabs></riot-tabs>
-    <!--<contact></contact>
-    <hr>
-    <approval></approval>
-    <hr>
-    <register></register>-->
+    <footer></footer>
   </body>
-   <script type="riot/tag" src="src/tab.tag"></script>
+    
+    <script type="riot/tag" src="src/tab.tag"></script>
     <script type="riot/tag" src="build/approval.tag"></script>
     <script type="riot/tag" src="build/contact.tag"></script>
     <script type="riot/tag" src="build/register.tag"></script>
+    <script type="riot/tag" src="build/footer.tag"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.3.2/riot+compiler.min.js"></script>
     <script src="https://cdn.jsdelivr.net/riot-route/3.0.1/route.min.js"></script>
